--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "author": "Jose Restrepo",
   "license": "ISC",
@@ -12,5 +14,9 @@
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
